improvements for type filters and configuration methods: no anonymous classes, use new stack implementations. orbit updated to latest release build